2016-05-12  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Variable renamings.

	For consistency.

	* src/ftinspect.cpp, src/ftinspect.h: s/numFaces/numberOfFaces/,
	s/numNamedInstancesList/numberOfNamedInstancesList/,
	s/numNamedInstances/numberOfNamedInstances/,
	s/currentInstanceIndex/currentNamedInstanceIndex/.
	s/currentNumGlyphs/currentNumberOfGlyphs/.

2016-05-12  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display more glyph and font information.

	* src/ftinspect.cpp (Engine::loadFont): Update `curFamilyName' and
	`curStyleName'.
	(Engine::currentFamilyName, Engine::currentStyleName,
	Engine::glyphName): New methods.

	(MainGUI::closeFont, MainGUI::showFont, MainGUI::adjustGlyphIndex,
	MainGUI::createLayout): Updated.

	* src/ftinspect.h (Engine): New members `curFamilyName' and
	`curStyleName'.
	Updated.
	(MainGUI): New `fontFilenameLabel', `fontNameLabel', and
	`glyphNameLabel' members.
	Use `QGridLayout' for `infoRightLayout'.

2016-05-12  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Fix logical mistakes in font navigation.

	* src/ftinspect.cpp (Engine::Engine): Initialize `ftSize'.
	(MainGUI::showFont): Don't let exceed indices the number of
	available index values if `preserveIndices' is active.
	Always call `engine->loadFont' even for invalid fonts so that
	various font-global variables are set correctly.

2016-05-11  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp, src/ftinspect.h: s/Instances/NamedInstances/.
	Also display `Previous/Next Named Instance' on the buttons.

2016-05-11  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp, src/ftinspect.h: s/fonts/fontList/.

2016-05-11  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display glyph index.

	* src/ftinspect.cpp (MainGUI::createLayout): Add `infoLeftLayout'
	and `infoRightLayout' at the top of the window; add
	`glyphIndexLabel' to the right.
	(MainGUI::adjustGlyphIndex): Set text for `glyphIndexLabel'
	(MainGUI::setDefaults): Call `adjustGlyphIndex'.
