@@ -1,3 +1,10 @@
+2016-05-14  Werner Lemberg  <wl@gnu.org>
+
+	[ftinspect] Variable renaming.
+
+	* src/ftinspect.cpp, src/ftinspect.h (FaceID):
+	s/instanceIndex/namedInstanceIndex/.
+
 2016-05-12  Werner Lemberg  <wl@gnu.org>
 
 	[ftinspect] Variable renamings.
